まぶたの表現
- bottomの位置がおかしい
- topとbottomが半分になっていない
- ボヤケた表現の2つの画像がうまく入れ替わっていない

--- a/pixiv-tech-lp/index.html
+++ b/pixiv-tech-lp/index.html
@@ -9,12 +9,14 @@
   </head>
   <body>
     <div class="stage">
+      <div class="eye--top"></div>
       <img src="./img//melodeks.svg" alt="logo-weak" class="logo--weak-blur" />
       <img
         src="./img//melodeks.svg"
         alt="logo-weak"
         class="logo--strong-blur"
       />
+      <div class="eye--bottom"></div>
     </div>
   </body>
 </html>
