tech-fes v1 の アニメーションを参考にブラッシュアップ

--- a/pixiv-tech-lp/index.html
+++ b/pixiv-tech-lp/index.html
@@ -5,17 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./css/style.css" />
-    <title>SVG TEST</title>
+    <title>MelodiX!</title>
   </head>
   <body>
     <div class="stage">
       <div class="eye--top"></div>
-      <img src="./img//melodeks.svg" alt="logo-weak" class="logo--weak-blur" />
-      <img
-        src="./img//melodeks.svg"
-        alt="logo-weak"
-        class="logo--strong-blur"
-      />
+      <img src="./img/melodeks.svg" alt="logo-clear" class="logo--clear" />
+      <div class="blurlogo--wrapper">
+        <img
+          src="./img//melodeks.svg"
+          alt="logo-weak"
+          class="logo--weak-blur"
+        />
+        <img
+          src="./img//melodeks.svg"
+          alt="logo-weak"
+          class="logo--strong-blur"
+        />
+      </div>
       <div class="eye--bottom"></div>
     </div>
   </body>
