--- a/pixiv-tech-lp/index.html
+++ b/pixiv-tech-lp/index.html
@@ -5,13 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./css/style.css" />
-    <title>MelodiX!</title>
+    <title>MelodiX!?</title>
   </head>
   <body>
     <div class="stage">
-      <div class="eye--top"></div>
       <img src="./img/melodeks.svg" alt="logo-clear" class="logo--clear" />
-      <div class="blurlogo--wrapper">
+      <div class="effect--logo-wrapper">
         <img
           src="./img//melodeks.svg"
           alt="logo-weak"
@@ -23,6 +22,7 @@
           class="logo--strong-blur"
         />
       </div>
+      <div class="eye--top"></div>
       <div class="eye--bottom"></div>
     </div>
   </body>
